--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>I will write anything to fill in the paragraph 3 provided</p>
     <p>I will write anything to fill in the paragraph 4 provided</p>
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07">
+    <a href="https://www.w3schools.com/" target="_blank">alx pic</a>
 </body>
 </html>
