--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,7 +6,8 @@
     <title>html practice</title>
 </head>
 <body>
-    <a href="\index.html">webpage</a>
+   <a href="/index.html">homepage</a>
+    <a href="/tweets.html">webpage</a>
     <a href="https://help.twitter.com/en/using-x/how-to-embed-a-post" target="_blank">how-to-embed-a-post</a>
 </body>
 </html>
