--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,8 @@
     <title>html practice</title>
 </head>
 <body>
+    <a href="/index.html">homepage</a>
+    <a href="/tweets.html">webpage</a>
     <h1>level 1</h1>
     <h2>level 2</h2>
     <h3>level 3</h3>
