--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="/index.html">homepage</a>
-    <a href="/tweets.html">webpage</a>
+    <a href="/tweets.html">Tweet</a>
     <h1>level 1</h1>
     <h2>level 2</h2>
     <h3>level 3</h3>
