--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -8,6 +8,6 @@
 <body>
    <a href="/index.html">homepage</a>
     <a href="/tweets.html">Tweet</a>
-    <a href="https://help.twitter.com/en/using-x/how-to-embed-a-post" target="_blank">how-to-embed-a-post</a>
+    <a href="https://help.twitter.com/en/using-x/how-to-embed-a-post" target="_blank">Tweet</a>
 </body>
 </html>
