--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -9,5 +9,6 @@
    <a href="/index.html">homepage</a>
     <a href="/tweets.html">Tweet</a>
     <a href="https://help.twitter.com/en/using-x/how-to-embed-a-post" target="_blank">Tweet</a>
+    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Drop one player <a href="https://t.co/xe95XJmhQT">pic.twitter.com/xe95XJmhQT</a></p>&mdash; TheOnlyCozy (@1Lucifer_1) <a href="https://twitter.com/1Lucifer_1/status/1804880351308693884?ref_src=twsrc%5Etfw">June 23, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
