--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,16 +6,35 @@
     <title>html practice</title>
 </head>
 <body>
-    <a href="/index.html">homepage</a>
-    <a href="/tweets.html">Tweet</a>
-    <h1>level 1</h1>
-    <h2>level 2</h2>
-    <h3>level 3</h3>
-    <p>I will write anything to fill in the paragraph 1 provided</p>
-    <p>I will write anything to fill in the paragraph 2 provided</p>
-    <p>I will write anything to fill in the paragraph 3 provided</p>
-    <p>I will write anything to fill in the paragraph 4 provided</p>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07">
-    <a href="https://www.w3schools.com/" target="_blank">alx pic</a>
+    <header>
+        <ul>
+            <li><a href="/index.html">homepage</a></li>
+        </ul>
+        <ul>
+            <li><a href="/tweets.html">Tweet</a></li>
+        </ul>
+
+    </header>
+    <main>
+        <article>
+            <h1>level 1</h1>
+            <h2>level 2</h2>
+            <h3>level 3</h3>
+            <p>I will write anything to fill in the paragraph 1 provided</p>
+            <p>I will write anything to fill in the paragraph 2 provided</p>
+            <p>I will write anything to fill in the paragraph 3 provided</p>
+            <p>I will write anything to fill in the paragraph 4 provided</p>
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07">
+            <a href="https://www.w3schools.com/" target="_blank">alx pic</a>
+        </article>
+        <aside>
+            <p>“placeholder to add comment thread later”</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Made by Nkosi_</p>
+        <a href="https://intranet.alxswe.com/users/my_profile" target="_blank">here</a>
+    </footer>
+
 </body>
 </html>
