--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -25,7 +25,37 @@
             <p>I will write anything to fill in the paragraph 3 provided</p>
             <p>I will write anything to fill in the paragraph 4 provided</p>
             <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07">
-            <a href="https://www.w3schools.com/" target="_blank">alx pic</a>
+            <a href="https://www.w3schools.com/" target="_blank">html</a>
+
+            <table>
+                <tbody>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Micheal</td>
+                        <td>32</td>
+                        <td>Austraila</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
         </article>
         <aside>
             <p>“placeholder to add comment thread later”</p>
@@ -35,6 +65,5 @@
         <p>Made by Nkosi_</p>
         <a href="https://intranet.alxswe.com/users/my_profile" target="_blank">here</a>
     </footer>
-
 </body>
 </html>
