--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -28,12 +28,14 @@
             <a href="https://www.w3schools.com/" target="_blank">html</a>
 
             <table>
-                <tbody>
+                <thead>
                     <tr>
                         <th>Name</th>
                         <th>Age</th>
                         <th>Country</th>
                     </tr>
+                </thead>
+                <tbody>
                     <tr>
                         <td>John</td>
                         <td>25</td>
