--- a/index.html
+++ b/index.html
@@ -6,14 +6,66 @@
     <title>html practice</title>
 </head>
 <body>
-    <h1>level 1</h1>
-    <h2>level 2</h2>
-    <h3>level 3</h3>
-    <p>I will write anything to fill in the paragraph 1 provided</p>
-    <p>I will write anything to fill in the paragraph 2 provided</p>
-    <p>I will write anything to fill in the paragraph 3 provided</p>
-    <p>I will write anything to fill in the paragraph 4 provided</p>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07">
-    <a href="https://www.w3schools.com/" target="_blank">alx pic</a>
+    <header>
+        <ul>
+            <li><a href="/index.html">homepage</a></li>
+        </ul>
+        <ul>
+            <li><a href="/tweets.html">Tweet</a></li>
+        </ul>
+
+    </header>
+    <main>
+        <article>
+            <h1>level 1</h1>
+            <h2>level 2</h2>
+            <h3>level 3</h3>
+            <p>I will write anything to fill in the paragraph 1 provided</p>
+            <p>I will write anything to fill in the paragraph 2 provided</p>
+            <p>I will write anything to fill in the paragraph 3 provided</p>
+            <p>I will write anything to fill in the paragraph 4 provided</p>
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX-Logo-07">
+            <a href="https://www.w3schools.com/" target="_blank">html</a>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>John</td>
+                        <td>25</td>
+                        <td>USA</td>
+                    </tr>
+                    <tr>
+                        <td>Emily</td>
+                        <td>28</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Micheal</td>
+                        <td>32</td>
+                        <td>Austraila</td>
+                    </tr>
+                    <tr>
+                        <td>Sophia</td>
+                        <td>21</td>
+                        <td>UK</td>
+                    </tr>
+                </tbody>
+            </table>
+        </article>
+        <aside>
+            <p>“placeholder to add comment thread later”</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Made by Nkosi_</p>
+        <a href="https://intranet.alxswe.com/users/my_profile" target="_blank">here</a>
+    </footer>
 </body>
 </html>
