--- a/tweets.html
+++ b/tweets.html
@@ -6,7 +6,16 @@
     <title>html practice</title>
 </head>
 <body>
-    <a href="\index.html">webpage</a>
-    <a href="https://help.twitter.com/en/using-x/how-to-embed-a-post" target="_blank">how-to-embed-a-post</a>
+    <header>
+        <ul>
+            <li><a href="/index.html">homepage</a></li>
+        </ul>
+        <ul>
+            <li><a href="/tweets.html">Tweet</a></li>
+        </ul>
+    </header>
+        <article>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Drop one player <a href="https://t.co/xe95XJmhQT">pic.twitter.com/xe95XJmhQT</a></p>&mdash; TheOnlyCozy (@1Lucifer_1) <a href="https://twitter.com/1Lucifer_1/status/1804880351308693884?ref_src=twsrc%5Etfw">June 23, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
 </body>
 </html>
