--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,10 +42,9 @@
                 <h3>Project Three</h3>
                 <p>This is a description of the third project. It highlights the innovative approach and results.</p>
                 <a href="https://www.example.com/project-three" target="_blank">View Project</a>
-            </article>
-            
+            </article> 
         </section>
-        <section id="about me">
+        <section id="about">
             <h2>About me</h2>
             <p>I am a cool calm and collected individual with intrest of changing the world one code at a time, my hobbies are reading and playing soccer</p>
         </section>
@@ -55,9 +54,10 @@
             <a href="https://www.linkedin.com/in/nkosinathi-masango-a1146529a/" target="_blank">LinkedIn</a>
             <a href="https://github.com/masangonathi/" target="_blank">GitHub</a>
         </section>
+    </section>
     <article></article>
     <footer>
-        <p> &copy; 2024 Nkosi</p>
+        <p>&copy; 2024 Nkosi</p>
     </footer>
 </body>
 </html>
